feat: Weather app controller added.