@@ -67,6 +67,13 @@
             <version>5.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
@@ -84,6 +91,10 @@
                 <version>0.0.4</version>
                 <configuration>
                     <mainClass>pl.wroclaw.asma.App</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
